--- a/app.json
+++ b/app.json
@@ -27,7 +27,7 @@
     },
     "image":"heroku/php",
     "addons":[
-        "jawsdb:leopard",
+        "jawsdb:kitefin",
         "cleardb",
         "heroku-postgresql",
         "semaphore",
